--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <a href="#"> Nossos Sistemas</a>
                     </li>
                     <li>
-                        <a href="#">Contato</a>
+                        <a href="#">Contatos</a>
                     </li>
                     <li>
                         <a href="#">Redes Sociais</a>
