--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             </div>
         </section>
 
-        <div class="container ">
+        <div class="container paragrafo">
             <h2>
                 O Que é Sistema ERP?
             </h2>
@@ -87,6 +87,35 @@
                         <img src="./imagens/o que é.png" alt="">
                     </li>
                 </ul>
+            </div>
+            <div class="paragrafo">
+                <p>
+                    O termo "ERP" significa "Enterprise Resource Planning," que em português pode ser traduzido como "Planejamento dos Recursos da Empresa." <br>
+                    <br>Um sistema de ERP é um software de gestão empresarial que integra e automatiza uma variedade de funções e processos de negócios em uma única plataforma. Esses sistemas são projetados para ajudar as organizações a melhorar a eficiência, a visibilidade e o controle de suas operações. <br>
+
+<br>Um sistema de ERP normalmente engloba várias áreas funcionais de uma empresa, como contabilidade, finanças, recursos humanos, cadeia de suprimentos, produção, vendas, compras e muito mais. <br> 
+
+<br>Isso permite que os departamentos compartilhem informações em tempo real e ajuda na tomada de decisões mais informadas. Além disso, os sistemas ERP costumam ser altamente personalizáveis para atender às necessidades específicas de uma organização.
+
+Alguns dos principais benefícios de um sistema de ERP incluem: </p>
+<br>
+
+<p>1. Integração: Permite a integração de dados e processos em toda a organização, eliminando a necessidade de sistemas isolados e redundantes.</p> <br>
+
+<p>2. Automatização: Automatiza tarefas repetitivas, economizando tempo e reduzindo erros humanos.</p> <br>
+
+<p>3. Melhoria de processos: Ajuda a otimizar os processos de negócios, tornando-os mais eficientes.</p> <br>
+
+<p>4. Tomada de decisões informadas: Fornece informações em tempo real e relatórios detalhados para ajudar na tomada de decisões estratégicas.</p> <br>
+
+<p>5. Visibilidade: Oferece uma visão holística das operações da empresa, o que pode melhorar o controle e a gestão.</p> <br>
+
+<p>6. Conformidade: Ajuda a garantir que a empresa esteja em conformidade com regulamentações e normas relevantes.</p> <br>
+
+<p>7. Eficiência de custos: Pode reduzir custos operacionais, eliminando redundâncias e melhorando a eficiência.</p> <br>
+
+<p>No entanto, a implementação de um sistema de ERP é um processo complexo que requer planejamento cuidadoso e treinamento para os usuários. Além disso, pode ser um investimento significativo em termos de tempo e recursos. Portanto, as empresas devem avaliar suas necessidades e recursos antes de decidir adotar um sistema de ERP.
+                </p>
             </div>
         </div>
         
