--- a/index.html
+++ b/index.html
@@ -106,9 +106,7 @@
 
     3. Melhoria de processos: Ajuda a otimizar os processos de negócios, tornando-os mais eficientes. <br>
 
-    4. Tomada de decisões informadas: Fornece informações em tempo real e relatórios detalhados para ajudar na tomada de decisões estratégicas.</p> <br>
-
-
+    4. Tomada de decisões informadas: Fornece informações em tempo real e relatórios detalhados para ajudar na tomada de decisões estratégicas.</p
        
                 </div>
             </div>
@@ -172,43 +170,43 @@
     <form>
         <div class="campo">
             <label for="nome"> Seu nome </label >
-            <input type="text" id="nome" placeholder="nome" required> 
+            <input type="text" id="nome" placeholder="nome" name="nome"> 
         </div>
         <div class="campo">
             <label for="sistemas">Sistema de interesse</label>
-            <input type="text" id="sistema" placeholder="Seu sistema" required>
+            <input type="text" id="sistema" placeholder="Seu sistema" name="sistema">
         </div>
         <div class="campo">
         <label for="cnpj">CNPJ</label>  
-        <input type="cnpj" id="cnpj" placeholder="Seu CNPJ" required>
+        <input type="cnpj" id="cnpj" placeholder="Seu CNPJ" name="cnpj">
         </div>
         <div class="campo">
             <label for="cep">CEP</label>
-            <input type="cep" id="cep" placeholder="Seu CEP" required>
+            <input type="cep" id="cep" placeholder="Seu CEP" >
         </div>
         <div class="campo">
             <label for="email">Email</label>
-            <input type="email" id="email" placeholder="Seu Email" required>
+            <input type="email" id="email" placeholder="Seu Email" name="cep">
         </div>
         <div class="campo">
             <label for="telefone">telefone</label>
-            <input type="tel" id="telefone" placeholder="Seu telefone" required>
+            <input type="tel" id="telefone" placeholder="Seu telefone" name="telefone">
         </div>
         <div class="campo">
             <label for="rua">Endereço completo</label>
-            <input type="text" id="rua" placeholder="Sua rua" required>
+            <input type="text" id="rua" placeholder="Sua rua" >
         </div>
         <div class="campo">
             <label for="numero">numero</label>
-            <input type="number text" id="numero" placeholder="Numero da sua residencia" required >
+            <input type="number text" id="numero" placeholder="Numero da sua residencia"  >
         </div>
         <div class="campo">
             <label for="bairro">Bairro</label>
-            <input type="text" id="rua" placeholder="Seu bairro" required >
+            <input type="text" id="rua" placeholder="Seu bairro"  >
         </div>
         <div class="campo">
             <label for="cidade">Cidade</label>
-            <input type="text" id="cidade" placeholder="Sua cidade" required >
+            <input type="text" id="cidade" placeholder="Sua cidade"  >
         </div>
         <div class="campo">
             <label for="estado">Estado</label>
@@ -262,7 +260,9 @@
             <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
         <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
         <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-        <script src="./js/jquery.mask.min.js"></script>    
+        <script src="./js/jquery.mask.min.js"></script>  
+        <script src="./js/jquery.validate.min.js"></script>  
+        <script src="./js/messages_pt_BR.min.js"></script>
             <script src="./code.js">
                 
             </script>
