--- a/index.html
+++ b/index.html
@@ -236,7 +236,9 @@
                 <div class="container-flex">
                     <div class="container">
                         <p>
-                            2023 &copy; Raizes Tecnologia - Todos os direitos reservados 
+                            2023 &copy; Raizes Tecnologia - Todos os direitos reservados <br>
+                                <br>Feito com ♥ pela vinny tecnologia 
+                            
                         </p>
                         <ul class="containr">
                             <li >
