--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                             <a href="#"> Sobre</a>
                         </li>
                         <li>
-                            <a href="#"> Nossos Sistemas</a>
+                            <a href="#"> Nossas soluções/a>
                         </li>
                         <li>
                             <a href="#">Contatos</a>
