--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <body>
             <header> 
                 <div class="container container-flex">
-                    <img src="./imagens/logo raizes.jpg" alt="">
+                    <h1>WEB SOLUÇÕES</h1>
                     <div class="Menu-Hamburguer">
                         <span></span>
                         <span></span>
@@ -26,7 +26,7 @@
                             <a href="#"> Sobre</a>
                         </li>
                         <li>
-                            <a href="#"> Nossas soluções/a>
+                            <a href="#"> Nossas soluções</a>
                         </li>
                         <li>
                             <a href="#">Contatos</a>
