--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 
                 
                     <div id="container-paragrafo">
-                        <h2>SOBRE A WEB SOLUÇÕES</h2>
+                        <h2>raizes</h2>
                         <p>  Olá, sou o fundador da Raízes Tecnologia, e nossa paixão é simplificar a gestão de empresas.
                             Com nossos sistemas ERP, cultivamos soluções personalizadas que enraízam eficiência e crescimento.
                             </p>
