--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dona chick</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <header>
-    <h1>
-        DONA CHICK
-    </h1>
+    <div class="container">
+        <h1>
+            DONA CHICK
+        </h1>
+        <form >
+            <input type="search" placeholder="busque aqui">
+            <button type="submit">Pesquisar</button>
+        </form>
+    </div>
 </header>
 <body>
     
