--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <button type="submit">Pesquisar</button>
         </form>
     </div>
-    <nav>
+    <nav class="container">
         <ul class="menu">
             <li>
                 Roupas
@@ -53,6 +53,93 @@
         </div>
     </nav>
 </header>
+    <div class="container conteudo">
+        <main>
+            <section class="destaque">
+                <h2>
+                    Em Destaque
+                </h2>
+                <article class="descricao">
+                    <a href="#">
+                        <img src="https://via.placeholder.com/320x320">
+                        <h3>
+                            Vestido em breve para todas as 
+                        </h3>
+                    </a>
+                </article>
+            </section>
+            <h2>
+                <section >
+                Descontos imperdiveis
+            </h2>
+                <div class="descontos">
+                    <article class="descricao">
+                        <a href="#">
+                            <img src="https://via.placeholder.com/320x320">
+                            <h3>
+                                vestido em breve chegando dia 31/02
+                            </h3>
+                        </a>
+                    </article>
+                    <article class="descricao">
+                        <a href="#">
+                            <img src="https://via.placeholder.com/320x320">
+                            <h3>
+                                vestido em breve chegando dia 31/02
+                            </h3>
+                        </a>
+                    </article>
+                    <article class="descricao">
+                        <a href="#">
+                            <img src="https://via.placeholder.com/320x320">
+                            <h3>
+                                vestido em breve chegando dia 31/02
+                            </h3>
+                        </a>
+                    </article>
+                    <article class="descricao">
+                        <a href="#">
+                            <img src="https://via.placeholder.com/320x320">
+                            <h3>
+                                vestido em breve chegando dia 31/02
+                            </h3>
+                        </a>
+                    </article>  
+                </section>
+                </div>
+        </main>
+        <aside >
+            <section class="novidades">
+                <h2>
+                    novidades
+                </h2>
+                <article class="descricao">
+                    <a href="#">
+                        <img src="https://via.placeholder.com/320x320">
+                        <h3>
+                            vestido rosa
+                        </h3>
+                    </a>
+                </article>
+                <article class="descricao">
+                    <a href="#">
+                        <img src="https://via.placeholder.com/320x320">
+                        <h3>
+                            vestido roxo
+                        </h3>
+                    </a>
+                </article>
+                <article class="descricao">
+                    <a href="#">
+                        <img src="https://via.placeholder.com/320x320">
+                        <h3>
+                            vestido amarelo
+                        </h3>
+                    </a>
+                </article>
+            </section>
+        </aside>
+    </div>
 <body>
     
 </body>
