incluindo mais detalhes

--- a/index.html
+++ b/index.html
@@ -68,14 +68,14 @@
                     </a>
                 </article>
             </section>
-            <h2>
-                <section >
+            <h2 class="td">
+                <section  >
                 Descontos imperdiveis
             </h2>
                 <div class="descontos">
                     <article class="descricao">
                         <a href="#">
-                            <img src="https://via.placeholder.com/320x320">
+                            <img src="imagens/vestido azul perto da piscina.jpg" class="imgn">
                             <h3>
                                 vestido em breve chegando dia 31/02
                             </h3>
@@ -83,7 +83,7 @@
                     </article>
                     <article class="descricao">
                         <a href="#">
-                            <img src="https://via.placeholder.com/320x320">
+                            <img src="./imagens/vestido rosa loira.jpg" class="imgn">
                             <h3>
                                 vestido em breve chegando dia 31/02
                             </h3>
@@ -91,7 +91,7 @@
                     </article>
                     <article class="descricao">
                         <a href="#">
-                            <img src="https://via.placeholder.com/320x320">
+                            <img src="./imagens/vestido roxo.jpeg" class="imgn">
                             <h3>
                                 vestido em breve chegando dia 31/02
                             </h3>
@@ -105,17 +105,41 @@
                             </h3>
                         </a>
                     </article>  
-                </section>
+                    <article class="descricao">
+                        <a href="#">
+                            <img src="https://via.placeholder.com/320x320">
+                            <h3>
+                                vestido em breve chegando dia 31/02
+                            </h3>
+                        </a>
+                    </article>  
+                    <article class="descricao">
+                        <a href="#">
+                            <img src="https://via.placeholder.com/320x320">
+                            <h3>
+                                vestido em breve chegando dia 31/02
+                            </h3>
+                        </a>
+                    </article>  
+                    <article class="descricao">
+                        <a href="#">
+                            <img src="https://via.placeholder.com/320x320">
+                            <h3>
+                                vestido em breve chegando dia 31/02
+                            </h3>
+                        </a>
+                    </article>  
                 </div>
+                </section>
         </main>
-        <aside >
+        <aside>
             <section class="novidades">
                 <h2>
                     novidades
                 </h2>
                 <article class="descricao">
                     <a href="#">
-                        <img src="https://via.placeholder.com/320x320">
+                        <img src="https://via.placeholder.com/320x320" class="aside">
                         <h3>
                             vestido rosa
                         </h3>
@@ -123,7 +147,7 @@
                 </article>
                 <article class="descricao">
                     <a href="#">
-                        <img src="https://via.placeholder.com/320x320">
+                        <img src="https://via.placeholder.com/320x320" class="aside">
                         <h3>
                             vestido roxo
                         </h3>
@@ -131,7 +155,7 @@
                 </article>
                 <article class="descricao">
                     <a href="#">
-                        <img src="https://via.placeholder.com/320x320">
+                        <img src="https://via.placeholder.com/320x320" class="aside">
                         <h3>
                             vestido amarelo
                         </h3>
@@ -139,7 +163,7 @@
                 </article>
             </section>
         </aside>
-    </div>
+</div>
 <body>
     
 </body>
