--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Dona chick</title>
     <link rel="stylesheet" href="./style.css">
 </head>
+<body>
 <header>
     <div class="container">
         <h1>
@@ -15,6 +16,11 @@
             <input type="search" placeholder="busque aqui">
             <button type="submit">Pesquisar</button>
         </form>
+    </div>
+    <div class="botao-menu">
+        <button type="button">
+            Abrir Menu
+        </button>
     </div>
     <nav class="container">
         <ul class="menu">
@@ -61,9 +67,9 @@
                 </h2>
                 <article class="descricao">
                     <a href="#">
-                        <img src="https://via.placeholder.com/320x320">
+                        <img src="./imagens/vestido natal.jpeg" class="natal">
                         <h3>
-                            Vestido em breve para todas as 
+                           Vestido para causar no natal
                         </h3>
                     </a>
                 </article>
@@ -99,7 +105,7 @@
                     </article>
                     <article class="descricao">
                         <a href="#">
-                            <img src="https://via.placeholder.com/320x320">
+                            <img src="./imagens/vestido roxo.jpeg">
                             <h3>
                                 vestido em breve chegando dia 31/02
                             </h3>
@@ -107,7 +113,7 @@
                     </article>  
                     <article class="descricao">
                         <a href="#">
-                            <img src="https://via.placeholder.com/320x320">
+                            <img src="./imagens/vestido roxo.jpeg">
                             <h3>
                                 vestido em breve chegando dia 31/02
                             </h3>
@@ -115,7 +121,7 @@
                     </article>  
                     <article class="descricao">
                         <a href="#">
-                            <img src="https://via.placeholder.com/320x320">
+                            <img src="./imagens/vestido roxo.jpeg">
                             <h3>
                                 vestido em breve chegando dia 31/02
                             </h3>
@@ -123,7 +129,7 @@
                     </article>  
                     <article class="descricao">
                         <a href="#">
-                            <img src="https://via.placeholder.com/320x320">
+                            <img src="./imagens/vestido roxo.jpeg">
                             <h3>
                                 vestido em breve chegando dia 31/02
                             </h3>
@@ -139,7 +145,7 @@
                 </h2>
                 <article class="descricao">
                     <a href="#">
-                        <img src="https://via.placeholder.com/320x320" class="aside">
+                        <img src="./imagens/bolsa.jpg" class="aside">
                         <h3>
                             vestido rosa
                         </h3>
@@ -164,7 +170,7 @@
             </section>
         </aside>
 </div>
-<body>
-    
+<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+<script src="./code.js"></script>
 </body>
 </html>
