--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     </article>
                     <article class="descricao">
                         <a href="#">
-                            <img src="./imagens/vestido roxo.jpeg">
+                            <img src="./imagens/vestido bege.jpeg"  class="v2">
                             <h3>
                                 vestido em breve chegando dia 31/02
                             </h3>
@@ -113,7 +113,7 @@
                     </article>  
                     <article class="descricao">
                         <a href="#">
-                            <img src="./imagens/vestido roxo.jpeg">
+                            <img src="./imagens/vestido roxinho.webp" class="imgn">
                             <h3>
                                 vestido em breve chegando dia 31/02
                             </h3>
@@ -121,7 +121,7 @@
                     </article>  
                     <article class="descricao">
                         <a href="#">
-                            <img src="./imagens/vestido roxo.jpeg">
+                            <img src="./imagens/vestido tri.jpg" class="imgn">
                             <h3>
                                 vestido em breve chegando dia 31/02
                             </h3>
@@ -129,7 +129,7 @@
                     </article>  
                     <article class="descricao">
                         <a href="#">
-                            <img src="./imagens/vestido roxo.jpeg">
+                            <img src="./imagens/vestido colorido.png" class="imgn">
                             <h3>
                                 vestido em breve chegando dia 31/02
                             </h3>
@@ -147,23 +147,23 @@
                     <a href="#">
                         <img src="./imagens/bolsa.jpg" class="aside">
                         <h3>
-                            vestido rosa
+                            Bolsa bage + sapato
                         </h3>
                     </a>
                 </article>
                 <article class="descricao">
                     <a href="#">
-                        <img src="https://via.placeholder.com/320x320" class="aside">
+                        <img src="./imagens/sandalia.avif" class="aside">
                         <h3>
-                            vestido roxo
+                            Mini tamanco
                         </h3>
                     </a>
                 </article>
                 <article class="descricao">
                     <a href="#">
-                        <img src="https://via.placeholder.com/320x320" class="aside">
+                        <img src="./imagens/sapatos.webp" class="aside">
                         <h3>
-                            vestido amarelo
+                            sapato cano curto
                         </h3>
                     </a>
                 </article>
