--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         <a href="#">
                             <img src="imagens/vestido azul perto da piscina.jpg" class="imgn">
                             <h3>
-                                vestido em breve chegando dia 31/02
+                                50% De desconto
                             </h3>
                         </a>
                     </article>
@@ -91,7 +91,7 @@
                         <a href="#">
                             <img src="./imagens/vestido rosa loira.jpg" class="imgn">
                             <h3>
-                                vestido em breve chegando dia 31/02
+                                50% De desconto
                             </h3>
                         </a>
                     </article>
@@ -99,7 +99,7 @@
                         <a href="#">
                             <img src="./imagens/vestido roxo.jpeg" class="imgn">
                             <h3>
-                                vestido em breve chegando dia 31/02
+                                50% De desconto
                             </h3>
                         </a>
                     </article>
@@ -107,7 +107,7 @@
                         <a href="#">
                             <img src="./imagens/vestido bege.jpeg"  class="v2">
                             <h3>
-                                vestido em breve chegando dia 31/02
+                                50% De desconto
                             </h3>
                         </a>
                     </article>  
@@ -115,15 +115,7 @@
                         <a href="#">
                             <img src="./imagens/vestido roxinho.webp" class="imgn">
                             <h3>
-                                vestido em breve chegando dia 31/02
-                            </h3>
-                        </a>
-                    </article>  
-                    <article class="descricao">
-                        <a href="#">
-                            <img src="./imagens/vestido tri.jpg" class="imgn">
-                            <h3>
-                                vestido em breve chegando dia 31/02
+                                50% De desconto
                             </h3>
                         </a>
                     </article>  
@@ -131,7 +123,15 @@
                         <a href="#">
                             <img src="./imagens/vestido colorido.png" class="imgn">
                             <h3>
-                                vestido em breve chegando dia 31/02
+                                50% De desconto
+                            </h3>
+                        </a>
+                    </article>  
+                    <article class="descricao">
+                        <a href="#">
+                            <img src="./imagens/vestido tri.jpg" class="imgn">
+                            <h3>
+                                50% De desconto
                             </h3>
                         </a>
                     </article>  
